gcc/testsuite/rust/rustc/ui/issues/issue-5062.rs
fn main() { format!("{:?}", None); }
// { dg-error ".E0282." "" { target *-*-* } .-1 }

